src/objects/External_Connections__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store connection point information</description>
    <fields>
        <fullName>API_Key__c</fullName>
        <inlineHelpText>api key</inlineHelpText>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <inlineHelpText>URL end point for connection</inlineHelpText>
        <label>End Point</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>External Connections</label>
</CustomObject>